# wapopp

./: .gitmodules  CMakeLists.txt  README.md  meson.build
cmake/: config.cmake.in  verify_version.cmake
include/wapopp/: detail.hpp  wapopp.hpp
src/: wapopp.cpp
test/: CMakeLists.txt  test_detail.cpp  test_wapopp.cpp
